mass replace html entity quotes, #9

--- a/content/post/drafts/2019-02-21-.md
+++ b/content/post/drafts/2019-02-21-.md
@@ -12,7 +12,7 @@ categories:
   
 #IF YOU PERFORM THESE COMMANDS ON YOUR T-MOBILE AC-1900 ROUTER, YOU DO SO AT YOUR OWN RISK!
   
-#THERE&#8217;S A GOOD CHANCE YOU WON&#8217;T BE ABLE TO GO BACK TO THE ORIGINAL T-MOBILE FIRMWARE AFTER PERFORMING THESE COMMANDS
+#THERE'S A GOOD CHANCE YOU WON'T BE ABLE TO GO BACK TO THE ORIGINAL T-MOBILE FIRMWARE AFTER PERFORMING THESE COMMANDS
   
 #IF YOU MESS SOMETHING UP AND BRICK THE ROUTER, THEN THAT IS ON YOU!!!
 
@@ -42,7 +42,7 @@ admin@RT-AC68U:/tmp/home/root# rm -rf /jffs/.sys/RT-AC68U
   
 admin@RT-AC68U:/tmp/home/root# nvram unset fw_check && nvram commit && reboot
 
-#Write all FFs to the mdt5 (in case that didn&#8217;t happen when you removed the TMO partition in the previous steps)
+#Write all FFs to the mdt5 (in case that didn't happen when you removed the TMO partition in the previous steps)
   
 admin@RT-AC68U:/tmp/home/root# ln -s /sbin/rc mtd-erase
   
