--- a/content/post/drafts/2019-05-30-.md
+++ b/content/post/drafts/2019-05-30-.md
@@ -59,7 +59,7 @@ Lets go ahead and enable caching:
 
 config/config.php
 
-&#8216;memcache.local&#8217; => &#8216;\OC\Memcache\APCu&#8217;,
+'memcache.local' => '\OC\Memcache\APCu',
 
 &nbsp;
 
