mass replace html entity double quotes, #9

--- a/content/post/drafts/2018-10-11-.md
+++ b/content/post/drafts/2018-10-11-.md
@@ -67,7 +67,7 @@ After this your all set. Its ready to use. Anything else is an accessory.
 
 Switches
 
-After realizing every switch out there that had the phrase &#8220;rackmount&#8221; costs $200 more i decided to just take a 1U shelf and two $20 gigabit eco switches and have slight redundancy and affordability.
+After realizing every switch out there that had the phrase "rackmount" costs $200 more i decided to just take a 1U shelf and two $20 gigabit eco switches and have slight redundancy and affordability.
 
 &nbsp;
 
