--- a/content/post/2018/2018-01-19-433mhz-testing.md
+++ b/content/post/2018/2018-01-19-433mhz-testing.md
@@ -23,7 +23,7 @@ I decided due to the lack of community support I am not going to make a Zigbee 4
 
 {{< youtube q09ws1L-db0 >}}
   
-![](/uploads/2018/01/photo_2018-01-19_09-36-09.jpg)
+{{< image src="/uploads/2018/01/photo_2018-01-19_09-36-09.jpg" alt="">}}
 
 &nbsp;
 
