--- a/content/post/2018/2018-10-11-12v-circuit.md
+++ b/content/post/2018/2018-10-11-12v-circuit.md
@@ -24,11 +24,11 @@ This controller came with a few negatives right off the jump. I dont want to lin
 
 <!--more-->
 
-![](/uploads/2018/09/20180922_1307042277026486571041808.jpg)
+{{< image src="/uploads/2018/09/20180922_1307042277026486571041808.jpg" alt="">}}
 
 After a couple of minutes fiddling with it. I realized the variable resister was bad. I traced the wires and its only being used as a signal voltage not for power source. It was safe for me to use a basic resister in place. 4 tries later i found one in my bin.
 
-![](/uploads/2018/09/20180922_130540712520492359021146.jpg)
+{{< image src="/uploads/2018/09/20180922_130540712520492359021146.jpg" alt="">}}
 
 5.05v is what this resister brought me to. Perfect replacement, time to solder it on.
 
