--- a/content/post/2018/2018-10-11-12v-circuit.md
+++ b/content/post/2018/2018-10-11-12v-circuit.md
@@ -32,31 +32,30 @@ After a couple of minutes fiddling with it. I realized the variable resister was
 
 5.05v is what this resister brought me to. Perfect replacement, time to solder it on.
 
+{{< image src="/uploads/2018/09/20180922_1306261392998551278179371.jpg" alt="">}}
 
-[](/uploads/2018/09/20180922_1306261392998551278179371.jpg)
-
-<img class="wp-image-621" src="/uploads/2018/09/img_20180920_220444_0537308767567549541375.jpg" width="720" height="1280" srcset="/uploads/2018/09/img_20180920_220444_0537308767567549541375.jpg 720w, /uploads/2018/09/img_20180920_220444_0537308767567549541375-169x300.jpg 169w, /uploads/2018/09/img_20180920_220444_0537308767567549541375-576x1024.jpg 576w" sizes="(max-width: 720px) 100vw, 720px" />
+{{< image src="/uploads/2018/09/img_20180920_220444_0537308767567549541375.jpg" alt="">}}
 
 Now lets get it mounted inside my power supply.
 
-<img class="wp-image-622" src="/uploads/2018/09/20180922_1305166070649590962164.jpg" width="2271" height="2271" srcset="/uploads/2018/09/20180922_1305166070649590962164.jpg 1920w, /uploads/2018/09/20180922_1305166070649590962164.jpg 150w, /uploads/2018/09/20180922_1305166070649590962164-300x300.jpg 300w, /uploads/2018/09/20180922_1305166070649590962164-768x768.jpg 768w, /uploads/2018/09/20180922_1305166070649590962164-1024x1024.jpg 1024w" sizes="(max-width: 2271px) 100vw, 2271px" />
+{{< image src="/uploads/2018/09/20180922_1305166070649590962164.jpg" alt="">}}
 
-<img class="wp-image-623" src="/uploads/2018/09/20180920_2214577970207237597030836.jpg" width="3024" height="4032" srcset="/uploads/2018/09/20180920_2214577970207237597030836.jpg 1440w, /uploads/2018/09/20180920_2214577970207237597030836-225x300.jpg 225w, /uploads/2018/09/20180920_2214577970207237597030836-768x1024.jpg 768w" sizes="(max-width: 3024px) 100vw, 3024px" />
+{{< image src="/uploads/2018/09/20180920_2214577970207237597030836.jpg" alt="">}}
 
 Finally lets plug in my 5v device. Smartthings hub.
 
-<img class="wp-image-625" src="/uploads/2018/09/20180920_221512239302413423304600.jpg" width="3024" height="4032" srcset="/uploads/2018/09/20180920_221512239302413423304600.jpg 1440w, /uploads/2018/09/20180920_221512239302413423304600-225x300.jpg 225w, /uploads/2018/09/20180920_221512239302413423304600-768x1024.jpg 768w" sizes="(max-width: 3024px) 100vw, 3024px" />
+{{< image src="/uploads/2018/09/20180920_221512239302413423304600.jpg" alt="">}}
 
 After mounting this and plugging it in. It reduced the power usage by about 250ma. I was also able to add other devices to the circuit after noticing the smart things hub did not use the power specified on the original adapter.
 
 Other devices were easy. Everything was running on 12v already so it was a matter of cabling it all together.
 
-<img class="wp-image-626" src="/uploads/2018/10/20180821_223116562343801667564004.jpg" width="3000" height="2250" srcset="/uploads/2018/10/20180821_223116562343801667564004.jpg 1920w, /uploads/2018/10/20180821_223116562343801667564004-300x225.jpg 300w, /uploads/2018/10/20180821_223116562343801667564004-768x576.jpg 768w, /uploads/2018/10/20180821_223116562343801667564004-1024x768.jpg 1024w" sizes="(max-width: 3000px) 100vw, 3000px" />
+{{< image src="/uploads/2018/10/20180821_223116562343801667564004.jpg" alt="">}}
 
-<img class="wp-image-627" src="/uploads/2018/10/20180830_2305024748197710256815264.jpg" width="3024" height="4032" srcset="/uploads/2018/10/20180830_2305024748197710256815264.jpg 1440w, /uploads/2018/10/20180830_2305024748197710256815264-225x300.jpg 225w, /uploads/2018/10/20180830_2305024748197710256815264-768x1024.jpg 768w" sizes="(max-width: 3024px) 100vw, 3024px" />
+{{< image src="/uploads/2018/10/20180830_2305024748197710256815264.jpg" alt="">}}
 
 After I had the cables hooked up. I added connectors on the other ends to the devices.
 
-<img class="wp-image-628" src="/uploads/2018/10/20180830_1739504215953853526811110.jpg" width="3024" height="4032" srcset="/uploads/2018/10/20180830_1739504215953853526811110.jpg 1440w, /uploads/2018/10/20180830_1739504215953853526811110-225x300.jpg 225w, /uploads/2018/10/20180830_1739504215953853526811110-768x1024.jpg 768w" sizes="(max-width: 3024px) 100vw, 3024px" />
+{{< image src="/uploads/2018/10/20180830_1739504215953853526811110.jpg" alt="">}}
 
 With most of my devices but servers switched over I can begin work on a battery backup system. I will be detailing that in a future blog post.
