--- a/content/post/drafts/2018-10-11-.md
+++ b/content/post/drafts/2018-10-11-.md
@@ -33,7 +33,7 @@ categories:
 
 ### Designing the rack This part is optional, however it helps me visualize what I can cut from the wood I have laying around. My rack was made of pallet wood which made it entirely free. After laying it out and seeying how long and tall it needed to be based on my servers. I moved on to cutting. 
 
- <img class="wp-image-632" src="/uploads/2018/10/img_20180803_214251_42821789718559536363730..jpg" width="480" height="457" srcset="/uploads/2018/10/img_20180803_214251_42821789718559536363730..jpg 480w, /uploads/2018/10/img_20180803_214251_42821789718559536363730.-300x286.jpg 300w" sizes="(max-width: 480px) 100vw, 480px" />I got all the peices cut to length.</figure> 
+ {{< image src="/uploads/2018/10/img_20180803_214251_42821789718559536363730.jpg" alt="Cut to length" caption="I got all the peices cut to length.">}}
 
 &nbsp;
 
