amlogic box recovery

--- a/content/post/drafts/2019-05-30-.md
+++ b/content/post/drafts/2019-05-30-.md
@@ -1,5 +1,5 @@
 ---
-title: How to properly install nextcloud and samba on Debian 9
+title: How to properly install nextcloud docker setup
 author: Luis Rodriguez
 type: post
 date: -001-11-30T00:00:00+00:00
